# mjc284_glfw_exploration

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  mjc284_SFML_Exploration
glad/include/glad/: glad.h
glad/src/: glad.c
src/: box.cpp  dimensions.cpp  mandelbrot.cpp  particles.cpp
src/planets/: planets_orbit.cpp  planets_random.cpp  planets_uniform.cpp
